@@ -18,9 +18,11 @@ import static com.funeat.fixture.ProductFixture.상품_삼각김밥_가격2000�
 import static com.funeat.fixture.ProductFixture.상품_삼각김밥_가격3000원_평점4점_생성;
 import static com.funeat.fixture.RecipeFixture.레시피_생성;
 import static com.funeat.fixture.RecipeFixture.레시피_좋아요_생성;
+import static com.funeat.fixture.RecipeFixture.레시피북마크요청_생성;
 import static com.funeat.fixture.RecipeFixture.레시피이미지_생성;
 import static com.funeat.fixture.RecipeFixture.레시피좋아요요청_생성;
 import static com.funeat.fixture.RecipeFixture.레시피추가요청_생성;
+import static com.funeat.fixture.RecipeFixture.북마크O;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.assertj.core.api.SoftAssertions.assertSoftly;
@@ -29,8 +31,9 @@ import com.funeat.comment.domain.Comment;
 import com.funeat.common.ServiceTest;
 import com.funeat.common.dto.PageDto;
 import com.funeat.member.domain.Member;
+import com.funeat.member.dto.MemberBookmarkRecipeDto;
+import com.funeat.member.dto.MemberBookmarkRecipesResponse;
 import com.funeat.member.dto.MemberRecipeDto;
-import com.funeat.member.dto.MemberRecipeProductDto;
 import com.funeat.member.dto.MemberRecipesResponse;
 import com.funeat.member.exception.MemberException.MemberNotFoundException;
 import com.funeat.product.domain.Category;
@@ -224,15 +227,8 @@ class RecipeServiceTest extends ServiceTest {
             // then
             final var expectedRecipes = List.of(recipe1_2, recipe1_1);
             final var expectedRecipesDtos = expectedRecipes.stream()
-                    .map(recipe -> {
-                        final var findRecipeImages = recipeImageRepository.findByRecipe(recipe);
-                        final var productsByRecipe = productRecipeRepository.findProductByRecipe(recipe);
-                        final var memberRecipeProductDtos = productsByRecipe.stream()
-                                .map(MemberRecipeProductDto::toDto)
-                                .collect(Collectors.toList());
-                        return MemberRecipeDto.toDto(recipe, findRecipeImages, memberRecipeProductDtos);
-                    })
-                    .collect(Collectors.toList());
+                    .map(recipe -> MemberRecipeDto.toDto(recipe, recipeImageRepository.findByRecipe(recipe)))
+                    .toList();
             final var expectedPage = new PageDto(2L, 1L, true, true, 0L, 10L);
 
             해당멤버의_꿀조합과_페이징_결과를_검증한다(actual, expectedRecipesDtos, expectedPage);
@@ -674,6 +670,204 @@ class RecipeServiceTest extends ServiceTest {
             final var favoriteRequest = 레시피좋아요요청_생성(true);
             assertThatThrownBy(() -> recipeService.likeRecipe(memberId, wrongRecipeId, favoriteRequest))
                     .isInstanceOf(RecipeNotFoundException.class);
+        }
+    }
+
+    @Nested
+    class bookmarkRecipe_성공_테스트 {
+
+        @Test
+        void 꿀조합에_북마크를_할_수_있다() {
+            // given
+            final var category = 카테고리_간편식사_생성();
+            단일_카테고리_저장(category);
+
+            final var product1 = 상품_삼각김밥_가격1000원_평점2점_생성(category);
+            final var product2 = 상품_삼각김밥_가격3000원_평점4점_생성(category);
+            final var product3 = 상품_삼각김밥_가격2000원_평점3점_생성(category);
+            복수_상품_저장(product1, product2, product3);
+            final var productIds = 상품_아이디_변환(product1, product2, product3);
+
+            final var author = 멤버_멤버1_생성();
+            final var authorId = 단일_멤버_저장(author);
+            final var member = 멤버_멤버2_생성();
+            final var memberId = 단일_멤버_저장(member);
+
+            final var images = 여러_이미지_생성(3);
+
+            final var createRequest = 레시피추가요청_생성(productIds);
+            final var recipeId = recipeService.create(authorId, images, createRequest);
+
+            // when
+            final var bookmarkRequest = 레시피북마크요청_생성(true);
+            recipeService.bookmarkRecipe(memberId, recipeId, bookmarkRequest);
+
+            final var actualRecipe = recipeRepository.findById(recipeId).get();
+            final var actualRecipeBookmark = recipeBookmarkRepository.findByMemberAndRecipe(member, actualRecipe).get();
+
+            // then
+            assertThat(actualRecipeBookmark.getBookmark()).isTrue();
+        }
+
+        @Test
+        void 꿀조합에_북마크를_취소할_수_있다() {
+            // given
+            final var category = 카테고리_간편식사_생성();
+            단일_카테고리_저장(category);
+
+            final var product1 = 상품_삼각김밥_가격1000원_평점2점_생성(category);
+            final var product2 = 상품_삼각김밥_가격3000원_평점4점_생성(category);
+            final var product3 = 상품_삼각김밥_가격2000원_평점3점_생성(category);
+            복수_상품_저장(product1, product2, product3);
+            final var productIds = 상품_아이디_변환(product1, product2, product3);
+
+            final var author = 멤버_멤버1_생성();
+            final var authorId = 단일_멤버_저장(author);
+            final var member = 멤버_멤버2_생성();
+            final var memberId = 단일_멤버_저장(member);
+
+            final var images = 여러_이미지_생성(3);
+
+            final var createRequest = 레시피추가요청_생성(productIds);
+            final var recipeId = recipeService.create(authorId, images, createRequest);
+
+            final var bookmarkRequest = 레시피북마크요청_생성(true);
+            recipeService.bookmarkRecipe(memberId, recipeId, bookmarkRequest);
+
+            // when
+            final var cancelBookmarkRequest = 레시피북마크요청_생성(false);
+            recipeService.bookmarkRecipe(memberId, recipeId, cancelBookmarkRequest);
+
+            final var actualRecipe = recipeRepository.findById(recipeId).get();
+            final var actualRecipeBookmark = recipeBookmarkRepository.findByMemberAndRecipe(member, actualRecipe).get();
+
+            // then
+            assertThat(actualRecipeBookmark.getBookmark()).isFalse();
+        }
+    }
+
+    @Nested
+    class bookmarkRecipe_실패_테스트 {
+
+        @Test
+        void 존재하지_않는_멤버가_레시피에_북마크를_하면_예외가_발생한다() {
+            // given
+            final var category = 카테고리_간편식사_생성();
+            단일_카테고리_저장(category);
+
+            final var product1 = 상품_삼각김밥_가격1000원_평점2점_생성(category);
+            final var product2 = 상품_삼각김밥_가격3000원_평점4점_생성(category);
+            final var product3 = 상품_삼각김밥_가격2000원_평점3점_생성(category);
+            복수_상품_저장(product1, product2, product3);
+            final var productIds = 상품_아이디_변환(product1, product2, product3);
+
+            final var author = 멤버_멤버1_생성();
+            final var authorId = 단일_멤버_저장(author);
+            final var wrongMemberId = authorId + 1L;
+
+            final var images = 여러_이미지_생성(3);
+
+            final var createRequest = 레시피추가요청_생성(productIds);
+            final var recipeId = recipeService.create(authorId, images, createRequest);
+
+            // when & then
+            final var bookmarkRequest = 레시피북마크요청_생성(true);
+            assertThatThrownBy(() -> recipeService.bookmarkRecipe(wrongMemberId, recipeId, bookmarkRequest))
+                    .isInstanceOf(MemberNotFoundException.class);
+        }
+
+        @Test
+        void 멤버가_존재하지_않는_레시피에_북마크를_하면_예외가_발생한다() {
+            // given
+            final var member = 멤버_멤버1_생성();
+            final var memberId = 단일_멤버_저장(member);
+
+            final var wrongRecipeId = 999L;
+
+            // when & then
+            final var bookmarkRequest = 레시피북마크요청_생성(true);
+            assertThatThrownBy(() -> recipeService.bookmarkRecipe(memberId, wrongRecipeId, bookmarkRequest))
+                    .isInstanceOf(RecipeNotFoundException.class);
+        }
+    }
+
+    @Nested
+    class findBookmarkRecipeByMember_성공_테스트 {
+
+        @Test
+        void 사용자가_저장한_꿀조합을_조회한다() {
+            // given
+            final var member1 = 멤버_멤버1_생성();
+            단일_멤버_저장(member1);
+
+            final var category = 카테고리_즉석조리_생성();
+            단일_카테고리_저장(category);
+
+            final var product1 = 상품_삼각김밥_가격1000원_평점5점_생성(category);
+            final var product2 = 상품_삼각김밥_가격2000원_평점3점_생성(category);
+            복수_상품_저장(product1, product2);
+
+            final var recipe1 = 레시피_생성(member1);
+            final var recipe2 = 레시피_생성(member1);
+            복수_꿀조합_저장(recipe1, recipe2);
+
+            final var productRecipe1 = 레시피_안에_들어가는_상품_생성(product1, recipe1);
+            final var productRecipe2 = 레시피_안에_들어가는_상품_생성(product2, recipe2);
+            복수_꿀조합_상품_저장(productRecipe1, productRecipe2);
+
+            final var request = 레시피북마크요청_생성(북마크O);
+            recipeService.bookmarkRecipe(member1.getId(), recipe2.getId(), request);
+
+            final var page = 페이지요청_생성(0, 10, 최신순);
+
+            // when
+            final var actual = recipeService.findBookmarkRecipeByMember(member1.getId(), page);
+
+            // then
+            final var expectedRecipes = List.of(recipe2);
+            final var expectedRecipesDtos = expectedRecipes.stream()
+                    .map(recipe -> MemberBookmarkRecipeDto.toDto(
+                            recipe,
+                            Collections.emptyList(),
+                            List.of(product2),
+                            false))
+                    .toList();
+            final var expectedPage = new PageDto(1L, 1L, true, true, 0L, 10L);
+
+            해당멤버가_저장한_꿀조합과_페이징_결과를_검증한다(actual, expectedRecipesDtos, expectedPage);
+        }
+
+        @Test
+        void 사용자가_저장한_꿀조합이_없을때_꿀조합은_빈상태로_조회된다() {
+            // given
+            final var member1 = 멤버_멤버1_생성();
+            단일_멤버_저장(member1);
+
+            final var page = 페이지요청_생성(0, 10, 최신순);
+
+            // when
+            final var actual = recipeService.findBookmarkRecipeByMember(member1.getId(), page);
+
+            // then
+            final var expectedRecipes = Collections.emptyList();
+            final var expectedPage = new PageDto(0L, 0L, true, true, 0L, 10L);
+
+            해당멤버가_저장한_꿀조합과_페이징_결과를_검증한다(actual, expectedRecipes, expectedPage);
+        }
+    }
+
+    @Nested
+    class findBookmarkRecipeByMember_실패_테스트 {
+
+        @Test
+        void 존재하지_않는_멤버가_해당_멤버의_저장한_레시피를_조회하면_예외가_발생한다() {
+            // given
+            final var notExistMemberId = 99999L;
+            final var page = 페이지요청_생성(0, 10, 최신순);
+
+            // when & then
+            assertThatThrownBy(() -> recipeService.findBookmarkRecipeByMember(notExistMemberId, page))
+                    .isInstanceOf(MemberNotFoundException.class);
         }
     }
 
@@ -1120,6 +1314,16 @@ class RecipeServiceTest extends ServiceTest {
             assertThat(actual.getRecipes()).usingRecursiveComparison()
                     .isEqualTo(expectedRecipesDtos);
             assertThat(actual.getPage()).usingRecursiveComparison()
+                    .isEqualTo(expectedPage);
+        });
+    }
+
+    private <T> void 해당멤버가_저장한_꿀조합과_페이징_결과를_검증한다(final MemberBookmarkRecipesResponse actual,
+                                             final List<T> expectedBookmarkRecipesDtos, final PageDto expectedPage) {
+        assertSoftly(soft -> {
+            assertThat(actual.recipes()).usingRecursiveComparison()
+                    .isEqualTo(expectedBookmarkRecipesDtos);
+            assertThat(actual.page()).usingRecursiveComparison()
                     .isEqualTo(expectedPage);
         });
     }
